Add HTML structure examples and enhance syntax documentation

--- a/syntax.html
+++ b/syntax.html
@@ -94,3 +94,155 @@ Grouping: {}
 <footer>
     <p></p>
 </footer>
+
+<!-- 
+Multiplication: *
+ul>li*5
+-->
+<ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+
+<!-- 
+Naming and numbering-1: $
+ul>li.sample$*5
+-->
+<ul>
+    <li class="sample1"></li>
+    <li class="sample2"></li>
+    <li class="sample3"></li>
+    <li class="sample4"></li>
+    <li class="sample5"></li>
+</ul>
+
+<!-- 
+Naming and numbering-2: $
+h$[title=topic$]{Headline $}*3
+-->
+<h1 title="topic1">Headline 1</h1>
+<h2 title="topic2">Headline 2</h2>
+<h3 title="topic3">Headline 3</h3>
+
+<!-- 
+Naming and numbering-3: $
+ul>li.item$$$*5
+-->
+<ul>
+    <li class="item001"></li>
+    <li class="item002"></li>
+    <li class="item003"></li>
+    <li class="item004"></li>
+    <li class="item005"></li>
+</ul>
+
+<!-- 
+Naming and numbering-4: $
+ul>li.item$@-*5
+-->
+<ul>
+    <li class="item5"></li>
+    <li class="item4"></li>
+    <li class="item3"></li>
+    <li class="item2"></li>
+    <li class="item1"></li>
+</ul>
+
+<!-- 
+Naming and numbering-4: $
+ul>li.item$@3*5
+-->
+<ul>
+    <li class="item3"></li>
+    <li class="item4"></li>
+    <li class="item5"></li>
+    <li class="item6"></li>
+    <li class="item7"></li>
+</ul>
+
+<!-- 
+ID and CLASS attribute-1: #
+#header
+-->
+<div id="header"></div>
+
+<!-- 
+ID and CLASS attribute-2: .
+.title
+-->
+<div class="title"></div>
+
+<!-- 
+ID and CLASS attribute-3: # .
+form#search.wide
+-->
+<form action="" id="search" class="wide"></form>
+
+<!-- 
+ID and CLASS attribute-4: . . .
+p.class1.class2.class3
+-->
+<p class="class1 class2 class3"></p>
+
+<!-- 
+Custom attributes-1: []
+p[title="Hello World"]
+-->
+<p title="Hello World"></p>
+
+<!-- 
+Custom attributes-2: []
+td[rowspan=2 colspan=3 title]
+-->
+<td rowspan="2" colspan="3" title=""></td>
+
+<!-- 
+Custom attributes-2: []
+[a='value1' b="value2"]
+-->
+<div a="value1" b="value2"></div>
+
+<!-- 
+Text-1: {}
+a{Click me}
+-->
+<a href="">Click me</a>
+
+<!-- 
+Text-2: {}
+p>{Click }+a{here}+{ to continue}
+-->
+<p>Click <a href="">here</a> to continue</p>
+
+<!-- 
+Implicit tag names-1
+.class
+-->
+<div class="class"></div>
+
+<!-- 
+Implicit tag names-2
+em>.class
+-->
+<em><span class="class"></span></em>
+
+<!-- 
+Implicit tag names-3
+ul>.class
+-->
+<ul>
+    <li class="class"></li>
+</ul>
+
+<!-- 
+Implicit tag names-4
+table>.row>.col
+-->
+<table>
+    <tr class="row">
+        <td class="col"></td>
+    </tr>
+</table>
