--- a/html_tag.html
+++ b/html_tag.html
@@ -8,3 +8,118 @@
 
 <!-- a:mail -->
 <a href="mailto:"></a>
+
+<!-- abbr -->
+<abbr title=""></abbr>
+
+<!-- acronym, acr -->
+<acronym title=""></acronym>
+<acronym title=""></acronym>
+
+<!-- base -->
+<base href="">
+
+<!-- basefont -->
+<basefont>
+
+<!-- br -->
+<br>
+
+<!-- frame -->
+<!-- <frame> -->
+
+<!-- frameset -->
+<frameset></frameset>
+
+<!-- hr -->
+<hr>
+
+<!-- bdo -->
+<bdo dir=""></bdo>
+
+<!-- bdo:r -->
+<bdo dir="rtl"></bdo>
+
+<!-- bdo:l -->
+<bdo dir="ltr"></bdo>
+
+<!-- col -->
+<col>
+
+<!-- colg, colgroup -->
+<colgroup></colgroup>
+<colgroup></colgroup>
+
+<!-- link -->
+<link rel="stylesheet" href="">
+
+<!-- link:css -->
+<link rel="stylesheet" href="style.css">
+
+<!-- link:print -->
+<link rel="stylesheet" href="print.css" media="print">
+
+<!-- link:favicon -->
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+<!-- link:touch -->
+<link rel="apple-touch-icon" href="favicon.png">
+
+<!-- link:rss -->
+<link rel="alternate" href="rss.xml" type="application/rss+xml" title="RSS">
+
+<!-- link:atom -->
+<link rel="alternate" href="atom.xml" type="application/atom+xml" title="Atom">
+
+<!-- link:import, link:im -->
+<link rel="import" href="component.html">
+<link rel="import" href="component.html">
+
+<!-- link:manifest, link:mf -->
+<link rel="manifest" href="manifest.json">
+<link rel="manifest" href="manifest.json">
+
+<!-- meta -->
+<meta>
+
+<!-- meta:utf -->
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
+<!-- meta:compat -->
+<meta http-equiv="X-UA-Compatible" content="IE=7">
+
+<!-- meta:vp -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- meta:compat -->
+<meta http-equiv="X-UA-Compatible" content="IE=7">
+
+<!-- meta:desc -->
+<meta name="description" content="">
+
+<!-- meta:edge -->
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+<!-- meta:kw -->
+<meta name="keywords" content="">
+
+<!-- meta:redirect -->
+<meta http-equiv="refresh" content="0; url=http://example.com">
+
+<!-- meta:refresh -->
+<meta http-equiv="refresh" content="5">
+
+<!-- style -->
+<style></style>
+
+<!-- script, scr -->
+<script></script>
+<script></script>
+
+<!-- script:src -->
+<script src=""></script>
+
+<!-- script:module -->
+<script type="module" src=""></script>
+
+<!-- /* NEXT */ -->
