Add additional HTML elements for images, sources, and multimedia

--- a/html_tag.html
+++ b/html_tag.html
@@ -122,4 +122,88 @@
 <!-- script:module -->
 <script type="module" src=""></script>
 
+<!-- img -->
+<img src="" alt="">
+
+<!-- img:srcset, img:s-->
+<img src="" alt="" srcset="">
+<img src="" alt="" srcset="">
+
+<!-- img:sizes,img:z -->
+<img src="" alt="" sizes="" srcset="">
+<img src="" alt="" sizes="" srcset="">
+
+<!-- picture -->
+<picture></picture>
+
+<!-- source, src -->
+<source>
+<source>
+
+<!-- source:src, src:sc -->
+<source src="" type="">
+<source src="" type="">
+
+<!-- source:srcset, src:s -->
+<source srcset="">
+<source srcset="">
+
+<!-- source:media, src:m -->
+<source media="(min-width: )" srcset="">
+<source media="(min-width: )" srcset="">
+
+<!-- source:type, src:t -->
+<source srcset="" type="image/">
+<source srcset="" type="image/">
+
+<!-- source:sizes, src:z -->
+<source sizes="" srcset="">
+<source sizes="" srcset="">
+
+
+
+<!-- source:media:type, src:mt -->
+<source media="(min-width: )" srcset="" type="image/">
+<source media="(min-width: )" srcset="" type="image/">
+
+
+<!-- source:media:sizes, src:mz -->
+<source media="(min-width: )" srcset="" sizes="">
+<source media="(min-width: )" srcset="" sizes="">
+
+<!-- source:sizes:type, src:zt -->
+<source sizes="" srcset="" type="image/">
+<source sizes="" srcset="" type="image/">
+
+<!-- iframe -->
+<iframe src="" frameborder="0"></iframe>
+
+<!-- embed -->
+<embed src="" type="">
+
+<!-- object -->
+<object data="" type=""></object>
+
+<!-- param -->
+<param name="" value="">
+
+<!-- map -->
+<map name=""></map>
+
+<!-- area -->
+<area shape="" coords="" href="" alt="">
+
+<!-- area:d -->
+<area shape="default" coords="" href="" alt="">
+
+<!-- area:c -->
+<area shape="circle" coords="" href="" alt="">
+
+<!-- area:r -->
+<area shape="rect" coords="" href="" alt="">
+
+<!-- area:p -->
+<area shape="poly" coords="" href="" alt="">
+
+<!-- ///////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 <!-- /* NEXT */ -->
