Add form and input elements with examples for enhanced HTML structure

--- a/html_tag.html
+++ b/html_tag.html
@@ -160,12 +160,9 @@
 <source sizes="" srcset="">
 <source sizes="" srcset="">
 
-
-
 <!-- source:media:type, src:mt -->
 <source media="(min-width: )" srcset="" type="image/">
 <source media="(min-width: )" srcset="" type="image/">
-
 
 <!-- source:media:sizes, src:mz -->
 <source media="(min-width: )" srcset="" sizes="">
@@ -207,3 +204,351 @@
 
 <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 <!-- /* NEXT */ -->
+<!-- Form, Input, Button -->
+
+<!-- form -->
+<form action=""></form>
+
+<!-- form:get -->
+<form action="" method="get"></form>
+
+<!-- form:post -->
+<form action="" method="post"></form>
+
+<!-- label -->
+<label for=""></label>
+
+<!-- input -->
+<input type="text">
+
+<!-- inp -->
+<input type="text" name="" id="">
+
+<!-- input:hidden, input:h-->
+<input type="hidden" name="">
+<input type="hidden" name="">
+
+<!-- input:text, input:t -->
+<input type="text" name="" id="">
+<input type="text" name="" id="">
+
+<!-- input:search -->
+<input type="search" name="" id="">
+
+<!-- input:email -->
+<input type="email" name="" id="">
+
+<!-- input:url -->
+<input type="url" name="" id="">
+
+<!-- input:password, input:p -->
+<input type="password" name="" id="">
+<input type="password" name="" id="">
+
+<!-- input:datetime -->
+<input type="datetime" name="" id="">
+
+<!-- input:datetime-local -->
+<input type="datetime-local" name="" id="">
+
+<!-- input:month -->
+<input type="month" name="" id="">
+
+<!-- input:week -->
+<input type="week" name="" id="">
+
+<!-- input:time -->
+<input type="time" name="" id="">
+
+<!-- input:tel -->
+<input type="tel" name="" id="">
+
+<!-- input:number -->
+<input type="number" name="" id="">
+
+<!-- input:color -->
+<input type="color" name="" id="">
+
+<!-- input:checkbox, input:c -->
+<input type="checkbox" name="" id="">
+<input type="checkbox" name="" id="">
+
+<!-- input:radio, input:r -->
+<input type="radio" name="" id="">
+<input type="radio" name="" id="">
+
+<!-- input:range -->
+<input type="range" name="" id="">
+
+<!-- input:file, input:f -->
+<input type="file" name="" id="">
+<input type="file" name="" id="">
+
+<!-- input:submit, input:s -->
+<input type="submit" value="">
+<input type="submit" value="">
+
+<!-- input:image, input:i -->
+<input type="image" src="" alt="">
+<input type="image" src="" alt="">
+
+<!-- input:button, input:b -->
+<input type="button" value="">
+<input type="button" value="">
+
+<!-- isindex -->
+<isindex>
+
+<!-- input:reset -->
+<input type="reset" value="">
+
+<!-- select -->
+<select name="" id=""></select>
+
+<!-- select:disabled, select:d -->
+<select name="" id="" disabled="disabled"></select>
+<select name="" id="" disabled="disabled"></select>
+
+<!-- option, opt -->
+<option value=""></option>
+<option value=""></option>
+
+<!-- optgroup, optg -->
+
+<optgroup></optgroup>
+<optgroup></optgroup>
+
+<!-- textarea -->
+<textarea name="" id=""></textarea>
+
+<!-- tarea -->
+<textarea name="" id=""></textarea>
+
+<!-- tarea:c -->
+<textarea name="" id="" cols="30"></textarea>
+
+<!-- tarea:r -->
+<textarea name="" id="" rows="10"></textarea>
+
+<!-- tarea:cr -->
+<textarea name="" id="" cols="30" rows="10"></textarea>
+
+<!-- marquee -->
+<marquee behavior="" direction=""></marquee>
+
+<!-- mark -->
+<mark></mark>
+
+<!-- menu:context, menu:c -->
+<menu type="context"></menu>
+<menu type="context"></menu>
+
+<!-- menu:toolbar, menu:t -->
+<menu type="toolbar"></menu>
+<menu type="toolbar"></menu>
+
+<!-- video -->
+<video src=""></video>
+
+<!-- audio -->
+<audio src=""></audio>
+
+<!-- html:xml -->
+<html xmlns="http://www.w3.org/1999/xhtml"></html>
+
+<!-- keygen -->
+<keygen>
+
+<!-- command -->
+<command>
+
+<!-- btn -->
+<button></button>
+
+<!-- button:submit, button:s, btn:s -->
+<button type="submit"></button>
+<button type="submit"></button>
+<button type="submit"></button>
+
+<!-- button:reset, button:r, btn:r -->
+<button type="reset"></button>
+<button type="reset"></button>
+<button type="reset"></button>
+
+
+<!-- button:disabled, button:d, btn:d -->
+<button disabled="disabled"></button>
+<button disabled="disabled"></button>
+<button disabled="disabled"></button>
+
+<!-- fieldset, fset, fst -->
+<fieldset></fieldset>
+<fieldset></fieldset>
+<fieldset></fieldset>
+
+<!-- fieldset:disabled, fieldset:d, fset:d, fst:d -->
+<fieldset disabled="disabled"></fieldset>
+<fieldset disabled="disabled"></fieldset>
+<fieldset disabled="disabled"></fieldset>
+<fieldset disabled="disabled"></fieldset>
+
+<!-- bq -->
+<blockquote></blockquote>
+
+<!-- fig, figure -->
+<figure></figure>
+<figure></figure>
+
+<!-- figcaption, figc -->
+<figcaption></figcaption>
+<figcaption></figcaption>
+
+<!-- picture, pic -->
+<picture></picture>
+<picture></picture>
+
+<!-- iframe, ifr -->
+<iframe src="" frameborder="0"></iframe>
+<iframe src="" frameborder="0"></iframe>
+
+<!-- embed, emb -->
+<embed src="" type="">
+<embed src="" type="">
+
+<!-- object, obj -->
+<object data="" type=""></object>
+<object data="" type=""></object>
+
+<!-- caption, cap -->
+<caption></caption>
+<caption></caption>
+
+<!-- colg -->
+<colgroup></colgroup>
+
+<!-- legend, leg -->
+<legend></legend>
+<legend></legend>
+
+<!-- section, sect -->
+<section></section>
+<section></section>
+
+<!-- article, art -->
+<article></article>
+<article></article>
+
+<!-- aside -->
+<aside></aside>
+
+<!-- header, hdr -->
+<header></header>
+
+<!-- footer, ftr -->
+<footer></footer>
+<footer></footer>
+
+<!-- dialog, dlg -->
+<dialog></dialog>
+<dialog></dialog>
+
+<!-- strong, str -->
+<strong></strong>
+<strong></strong>
+
+<!-- progress, prog -->
+<progress></progress>
+<progress></progress>
+
+<!-- main, mn -->
+<main></main>
+<main></main>
+
+<!-- template, tem -->
+<template></template>
+<template></template>
+
+<!-- data -->
+<data value=""></data>
+
+<!-- datalist, datal -->
+<datalist></datalist>
+<datalist></datalist>
+
+<!-- keygen, kg -->
+<keygen>
+<keygen>
+
+<!-- output, out -->
+<output></output>
+<output></output>
+
+<!-- details, det -->
+<details></details>
+<details></details>
+
+<!-- del -->
+<del></del>
+
+<!-- cmd -->
+<command>
+
+<!-- ri:dpr, ri:d -->
+<img src="" alt="" srcset="">
+<img src="" alt="" srcset="">
+
+<!-- ri:viewport, ri:v -->
+<img src="" alt="" sizes="" srcset="">
+<img src="" alt="" sizes="" srcset="">
+
+<!-- ri:art, ri:a -->
+<picture>
+    <source media="(min-width: )" srcset="">
+    <img src="" alt="">
+</picture>
+<picture>
+    <source media="(min-width: )" srcset="">
+    <img src="" alt="">
+</picture>
+
+<!-- ri:type, ri:t -->
+<picture>
+    <source srcset="" type="image/">
+    <img src="" alt="">
+</picture>
+<picture>
+    <source srcset="" type="image/">
+    <img src="" alt="">
+</picture>
+
+<!-- ol+ -->
+<ol></ol>
+
+<!-- ul+ -->
+<ul></ul>
+
+<!-- dl+ -->
+<dl></dl>
+
+<!-- map+ -->
+<map name=""></map>
+
+<!-- table+ -->
+<table></table>
+
+<!-- colgroup+, colg+ -->
+<colgroup></colgroup>
+<colgroup></colgroup>
+
+<!-- tr+ -->
+<tr></tr>
+
+<!-- select+ -->
+<select name="" id=""></select>
+
+<!-- optgroup+, optg+ -->
+<optgroup></optgroup>
+<optgroup></optgroup>
+
+<!-- pic+ -->
+<picture></picture>
